# nex-board

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: bingo.rs  loader.rs  main.rs  server.rs  text.rs  text_spawner.rs
