[package]
name = "electrical-bboard"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", features = [ "bevy_ui", "bevy_ui_render", "bevy_window" ] }
bevy_common_assets = { version = "0.14.0", features = ["csv"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
