[package]
name = "electrical-bboard"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
bevy = { version = "0.17.2", features = [ "bevy_ui", "bevy_ui_render", "bevy_window" ] }
bevy-tokio-tasks = "0.17.0"
bevy_common_assets = { version = "0.14.0", features = ["csv"] }
csv = "1.4.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = "1.48.0"
toml = "0.9.8"
